# ChangeLog for net-wireless/bluez-libs
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-wireless/bluez-libs/ChangeLog,v 1.16 2004/08/21 04:26:37 puggy Exp $

  21 Aug 2004; Douglas Russell,,, <puggy@gentoo.org> -bluez-libs-2.4.ebuild,
  -bluez-libs-2.5.ebuild, bluez-libs-2.7.ebuild:
  Bump 2.7 to stable as it's been trouble free for a while. Remove old and fast
  becoming useless versions. TODO: Bump 2.10 to stable as soon as 2.6.8 kernel
  reaches stable

  21 Aug 2004; Douglas Russell,,, <puggy@gentoo.org> :
  Bumping to new version.

  26 Jun 2004; Alastair Tse <liquidx@gentoo.org> bluez-libs-2.7.ebuild:
  fix DEPEND

*bluez-libs-2.7 (27 Mar 2004)

  27 Mar 2004; Douglas Russell <puggy@gentoo.org> bluez-libs-2.7.ebuild,
  bluez-libs-2.7.ebuild:
  Bump to new version, blocks bluez-sdp as incorporated in new version. #50620

  26 Apr 2004; Aron Griffis <agriffis@gentoo.org> bluez-libs-2.4.ebuild,
  bluez-libs-2.5.ebuild:
  Add die following econf for bug 48950

  24 Apr 2004; Danny van Dyk <kugelfang@gentoo.org> bluez-libs-2.5.ebuild:
  Minor change in src/Makefile.in to allow compilation with -fPIC. Marked ~amd64.

*bluez-libs-2.5 (29 Mar 2004)

  29 Mar 2004; Alastair Tse <liquidx@gentoo.org> bluez-libs-2.5.ebuild:
  version bump (#44589)

  15 Feb 2004; David Holm <dholm@gentoo.org> bluez-libs-2.4.ebuild:
  Added to ~ppc.

  12 Feb 2004; Ciaran McCreesh <ciaranm@gentoo.org> bluez-libs-2.4.ebuild:
  Adding ~sparc (works with some kernels, see bug #39710)

  30 Jan 2004; Peter Johanson <latexer@gentoo.org> bluez-libs-2.4.ebuild,
  metadata.xml:
  Fix for wireless->mobile herd change, and header dates

  09 May 2003; Peter Johanson <latexer@gentoo.org> bluez-libs-2.2.ebuild, bluez-libs-2.3.ebuild,
  bluez-libs-2.4.ebuild:
  Marked stable now that gentoo-sources-2.4.20-r4 is released.

*bluez-libs-2.4 (27 Apr 2003)

  27 Apr 2003; Peter Johanson <latexer@gentoo.org> bluez-libs-2.4.ebuild: