@@ -1,6 +1,6 @@
-MD5 bb14719a349b135ad51bc6e19db3fac3 bluez-libs-2.7.ebuild 678
-MD5 0f68d8646df679aae48df983c3c24255 bluez-libs-2.10.ebuild 681
-MD5 70207194afb2238f8487f8edf2b25aa1 ChangeLog 2338
+MD5 6d7ccdc1f0d11e2b43047e8d8f54a3fb ChangeLog 2601
 MD5 439de383d422683abddb9ff8b75aa67b metadata.xml 235
+MD5 c37fea271c09eabfe3c0139ed87b9532 bluez-libs-2.7.ebuild 589
+MD5 90e58cd5d647725d7a786ab7eab88d22 bluez-libs-2.10.ebuild 593
 MD5 e9e80d4297e7ac6f8e8018d52f9a082c files/digest-bluez-libs-2.7 66
 MD5 3582cb4d2e7e3578ac75f23798b13d25 files/digest-bluez-libs-2.10 67
