@@ -1,18 +1,17 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/bluez-libs/bluez-libs-2.7.ebuild,v 1.4 2004/08/21 04:26:37 puggy Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/bluez-libs/bluez-libs-2.7.ebuild,v 1.5 2004/09/13 09:23:33 kugelfang Exp $
 
 DESCRIPTION="Bluetooth Userspace Libraries"
 HOMEPAGE="http://bluez.sourceforge.net/"
 SRC_URI="http://bluez.sourceforge.net/download/${P}.tar.gz"
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="x86 ~sparc ppc ~amd64"
+KEYWORDS="x86 ~sparc ppc amd64"
 IUSE=""
 DEPEND="!net-wireless/bluez-sdp"
 
 src_compile() {
-	use amd64 && sed -i -e 's/CFLAGS\ =\ @CFLAGS@/CFLAGS\ =\ @CFLAGS@\ -fPIC/' src/Makefile.in
 	econf || die "econf failed"
 	emake || die
 }
